--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,18 @@
 [Window][Debug##Default]
 Pos=-1,-1
 Size=219,602
+Collapsed=0
 
 [Window][Panel]
-Pos=0,0
 Size=250,150
+Collapsed=0
 
 [Window][XXXXXXXXX]
-Pos=0,0
 Size=250,150
+Collapsed=0
 
 [Window][THE THINGAMAJACKSON]
 Pos=0,0
 Size=350,600
+Collapsed=0
 
